# mongosync

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
db/mongodb-1/: init-mongodb.js
examples/: mongosync.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  replication.rs
src/sinks/: stdout.rs
