[package]
name = "mongosync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
clap = { version = "4.3.17", features = ["derive"] }
log = "0.4.19"
mongodb = "2.6.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
serde_yaml = "0.9.24"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"
